# RE_Kenshi-1.0.68

./: Bugs.cpp  README.md  Settings.cpp  Settings.h  Version.cpp
1.0.68/: README.md
1.0.68/RVAs/: Steam_1.0.68.br
1.0.68/docs/: 01-string-and-vtable-survey.txt  02-decompile-broken-hook-targets.txt  03-rtti-vtables-and-spawn-call-graph.txt  04-verify-kenshilib-rvas-on-1-0-68.txt  05-charspawn-tail-and-set-inserter.txt  06-kenshi-hotkey-dispatcher-rva.txt  07-FUN_14082B370-not-hotkey-dispatcher.txt  08-hotkey-dispatcher-search.txt  09-keyboard-api-survey.txt  10-OIS-event-helper-tree.txt  11-wndproc-and-OIS-region-survey.txt  12-WndProc-candidate-rejected.txt  13-keyPressed-FOUND.txt
1.0.68/index/: class_offsets.csv  class_offsets.md  genuine_bad_mappings_1.0.68.csv  master_index_1.0.68.csv
1.0.68/recon/: recon47_weak_map_fix.txt  recon48_bindiff_apply.txt  recon49_collision_tiebreak.txt  recon50_singletons.txt  recon51_verify_med.txt
tools/SpeshimenQursiveBrainer/: CMakeLists.txt  README.md  SpeshimenQursiveBrainer.cpp
